# CSC4005

./: README.md
Projects/Final/: 4005-Final-Review.md
Projects/Lecture/: slide-0.pptx
Projects/Project/1/119010108_Project_1/: report.Rmd
Projects/Project/1/119010108_Project_1/src/: generatenum.c  in.txt  odd-even-sort.cpp
Projects/Project/2/: Mandelbrot-set-description.ppt
Projects/Project/2/119010108_Project_2/Appendix/: Data.xlsx  mpi_2.sh
Projects/Project/2/119010108_Project_2/Dynamic_Pthread_Version/src/: main.cpp
Projects/Project/2/119010108_Project_2/MPI_Version/src/: main.cpp
Projects/Project/2/119010108_Project_2/Pthread_Version/src/: main.cpp
Projects/Project/2/pic/: Analysis .xmind  Report.md
Projects/Project/3/: Report.md  temp.txt
Projects/Project/3/Project_3/CUDA_Version/: CMakeLists.txt
Projects/Project/3/Project_3/CUDA_Version/include/nbody/: body.hpp
Projects/Project/3/Project_3/CUDA_Version/src/: main.cu
Projects/Project/3/Project_3/MPI+OpenMP_Version/: CMakeLists.txt
Projects/Project/3/Project_3/MPI+OpenMP_Version/include/nbody/: body.hpp
Projects/Project/3/Project_3/MPI+OpenMP_Version/src/: main.cpp
Projects/Project/3/Project_3/MPI_Version/include/nbody/: body.hpp
Projects/Project/3/Project_3/MPI_Version/src/: main.cpp
Projects/Project/3/Project_3/OpenMP_Version/include/nbody/: body.hpp
Projects/Project/3/Project_3/OpenMP_Version/src/: main.cpp
Projects/Project/3/Project_3/Pthread_Version/imgui/examples/example_android_opengl3/android/: .project
Projects/Project/3/Project_3/Pthread_Version/include/nbody/: body.hpp
Projects/Project/3/Project_3/Pthread_Version/src/: main.cpp
Projects/Project/4/: Report.md  data.xlsx
Projects/Project/4/Project_4/CUDA_Version/include/hdist/: hdist.hpp
Projects/Project/4/Project_4/CUDA_Version/src/: main.cu
Projects/Project/4/Project_4/MPI+OpenMP_Version/: CMakeLists.txt
Projects/Project/4/Project_4/MPI+OpenMP_Version/include/hdist/: hdist.hpp
Projects/Project/4/Project_4/MPI+OpenMP_Version/src/: main.cpp
Projects/Project/4/Project_4/MPI_Version/include/hdist/: hdist.hpp
Projects/Project/4/Project_4/MPI_Version/src/: main.cpp
Projects/Project/4/Project_4/OpenMP_Version/: CMakeLists.txt
Projects/Project/4/Project_4/OpenMP_Version/include/hdist/: hdist.hpp
Projects/Project/4/Project_4/OpenMP_Version/src/: main.cpp
Projects/Project/4/Project_4/Pthread_Version/include/hdist/: hdist.hpp
Projects/Project/4/Project_4/Pthread_Version/src/: main.cpp
Projects/Tutorial/2/tut2-code-samples/: cuda-sample.cpp  mpi-sample-1.cpp  mpi-sample-2.cpp  openmp-sample.cpp  pthread-sample.cpp
Projects/Tutorial/4/pthread-part-1/: CMakeLists.txt  exp-1.cpp  exp-2.cpp  exp-3.cpp  exp-4.cpp
Projects/Tutorial/5/code/: CMakeLists.txt  README.md
Projects/Tutorial/5/code/src/: main_1.cpp  main_2.cpp  main_3.cpp  main_4.cpp
Projects/Tutorial/7/csc4005-t7-code/: a.out  cuda-block-thread.cu  mpi-struct.cpp  openmp-single.cpp  openmp-thread-num.cpp
Projects/Tutorial/7/csc4005-t7-code/cuda-cmake/: CMakeLists.txt  main.cu
Projects/Tutorial/7/csc4005-t7-code/cuda-query/: helper_cuda.h  helper_string.h  query.cpp
Projects/Tutorial/7/csc4005-t7-code/openmp-barrier/: no-barrier.cpp  with-barrier.cpp
Projects/Tutorial/7/csc4005-t7-code/openmp-cmake/: CMakeLists.txt  main.cpp
